# VulkanTest

./: CMakeLists.txt  CMakeSettings.json  shader_compile.bat
Shaders/src/: triangle.vert
VulkanTest/: CMakeLists.txt  DeviceBuilder.cpp  DeviceBuilder.h  DeviceConfigurations.h  FileReader.cpp  FileReader.h  Image.cpp  Image.h  PipelineBuilder.cpp  PipelineBuilder.h  Shader.cpp  Shader.h  ShaderBuilder.cpp  ShaderBuilder.h  VulkanException.h  VulkanTest.cpp  Window.cpp  Window.h  main.cpp
VulkanTest/camera/: Camera.h  FocusedCamera.cpp  FocusedCamera.h
data/sphere_gen/: generator.h
shaders/src/: triangle.frag  triangle.vert
